Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6985719/T6985719g.out
T6985719g.java:13:42: compiler.err.name.clash.same.erasure.no.override: f, java.util.List<java.lang.Integer>, T6985719g.B, f, java.util.List<java.lang.String>, T6985719g.A
1 error
